[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -72.0
margin_right = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="VBoxContainer"]
margin_right = 208.0
margin_bottom = 20.0
text = "Create Server"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 208.0
margin_bottom = 48.0
placeholder_text = "IP"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 208.0
margin_bottom = 72.0
text = "Join Server"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
